--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.thymeleaf.cache=false
 
 #Druid≈‰÷√
 ##JDBC≈‰÷√
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/blog?useUnicode=true&useSSL=false&characterEncoding=utf8
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/o_blog?useUnicode=true&useSSL=false&characterEncoding=utf8
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.username=root
 spring.datasource.druid.password=1qaz2wsx
